--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
-llvmlite==0.23.2+1.g67a89c7
+llvmlite==0.23.0
 locket==0.2.0
 lxml==4.2.2
 MarkupSafe==1.0
