--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,156 @@
-alabaster>=0.7.11
-appnope>=0.1.0
-asn1crypto>=0.24.0
-astroid>=1.6.5
-astropy>=3.0.3
-atomicwrites>=1.1.5
-attrs>=18.1.0
-Babel>=2.6.0
-backcall>=0.1.0
-backports.shutil-get-terminal-size>=1.0.0
-beautifulsoup4>=4.6.0
-bitarray>=0.8.2.1
-bleach>=2.1.3
-bokeh>=0.13.0
-boto>=2.48.0
-Bottleneck>=1.2.1
-certifi>=2018.4.16
-cffi>=1.11.5
-chardet>=3.0.4
-chest>=0.2.3
-click>=6.7
-cloudpickle>=0.5.3
-clyent>=1.2.1
-colorama>=0.3.9
-configobj>=5.0.6
-contextlib2>=0.5.5
-cryptography>=2.2.2
-cycler>=0.10.0
-Cython>=0.28.3
-cytoolz>=0.9.0.1
-dask>=0.18.1
-datashape>=0.5.2
-decorator>=4.3.0
-dill>=0.2.8.2
-distributed>=1.22.0
-Django>=2.0.7
-docutils>=0.14
-entrypoints>=0.2.3
-et-xmlfile>=1.0.1
-fastcache>=1.0.2
-gevent>=1.3.4
-greenlet>=0.4.13
-h5py>=2.8.0
-heapdict>=1.0.0
-html5lib>=1.0.1
-idna>=2.7
-imageio>=2.3.0
-imagesize>=1.0.0
-isort>=4.3.4
-itsdangerous>=0.24
-jdcal>=1.4
-jedi>=0.12.0
-Jinja2>=2.10
-jsonschema>=2.6.0
-jupyter>=1.0.0
-jupyter-client>=5.2.3
-jupyter-console>=5.2.0
-jupyter-core>=4.4.0
-kiwisolver>=1.0.1
-lazy-object-proxy>=1.3.1
-llvmlite>=0.23.0
-locket>=0.2.0
-lxml>=4.2.2
-MarkupSafe>=1.0
-mccabe>=0.6.1
-mistune>=0.8.3
-mkl-fft>=1.0.0.17
-mkl-random>=1.0.1
-more-itertools>=4.2.0
-mpmath>=1.0.0
-msgpack>=0.5.6
-msgpack-python>=0.5.6
-multipledispatch>=0.5.0
-nbconvert>=5.3.1
-nbformat>=4.4.0
-networkx>=2.1
-nltk>=3.3
-nose>=1.3.7
-numba>=0.38.1
-numexpr>=2.6.5
-numpy>=1.14.5
-numpydoc>=0.8.0
-odo>=0.5.0
-olefile>=0.45.1
-openpyxl>=2.5.4
-packaging>=17.1
-pandas>=0.23.1
-pandocfilters>=1.4.2
-parso>=0.2.1
-partd>=0.3.8
-path.py>=11.0.1
-pathlib2>=2.3.2
-patsy>=0.5.0
-PDPbox>=0.1
-pep8>=1.7.1
-pexpect>=4.6.0
-pickleshare>=0.7.4
-Pillow>=5.1.0
-pluggy>=0.6.0
-ply>=3.11
-prompt-toolkit>=1.0.15
-psutil>=5.4.6
-ptyprocess>=0.6.0
-py>=1.5.3
-pyasn1>=0.4.3
-pycodestyle>=2.4.0
-pycosat>=0.6.3
-pycparser>=2.18
-pycrypto>=2.6.1
-pycurl>=7.43.0.2
-pyflakes>=2.0.0
-Pygments>=2.2.0
-pylint>=1.9.2
-pyOpenSSL>=18.0.0
-pyparsing>=2.2.0
-PySocks>=1.6.8
-pytest>=3.6.2
-pytest-arraydiff>=0.2
-pytest-astropy>=0.4.0
-pytest-doctestplus>=0.1.3
-pytest-openfiles>=0.3.0
-pytest-remotedata>=0.3.0
-python-dateutil>=2.7.3
-pytz>=2018.5
-PyWavelets>=0.5.2
-PyYAML>=3.12
-pyzmq>=17.0.0
-QtAwesome>=0.4.4
-qtconsole>=4.3.1
-QtPy>=1.4.2
-redis>=2.10.6
-requests>=2.19.1
-rope>=0.10.7
-ruamel-yaml>=0.15.42
-scikit-image>=0.14.0
-scikit-learn>=0.19.1
-scipy>=1.1.0
-seaborn>=0.8.1
-Send2Trash>=1.5.0
-simplegeneric>=0.8.1
-singledispatch>=3.4.0.3
-six>=1.11.0
-snowballstemmer>=1.2.1
-sockjs-tornado>=1.0.3
-sortedcontainers>=2.0.4
-Sphinx>=1.7.5
-sphinxcontrib-websupport>=1.1.0
-spyder>=3.2.8
-SQLAlchemy>=1.2.8
-statsmodels>=0.9.0
-sympy>=1.1.1
-tables>=3.4.4
-tblib>=1.3.2
-terminado>=0.8.1
-testpath>=0.3.1
-toolz>=0.9.0
-tornado>=5.0.2
-traitlets>=4.3.2
-unicodecsv>=0.14.1
-urllib3>=1.23
-virtualenv>=16.0.0
-wcwidth>=0.1.7
-webencodings>=0.5.1
-Werkzeug>=0.14.1
-widgetsnbextension>=3.2.1
-wrapt>=1.10.11
-xlrd>=1.1.0
-xlwt>=1.2.0
-zict>=0.1.3
+alabaster==0.7.12
+appnope==0.1.0
+appscript==1.0.1
+asn1crypto==0.24.0
+astroid==2.0.4
+astropy==3.0.5
+atomicwrites==1.2.1
+attrs==18.2.0
+Babel==2.6.0
+backcall==0.1.0
+beautifulsoup4==4.6.3
+bitarray==0.8.3
+bleach==3.0.2
+bokeh==1.0.1
+boto==2.49.0
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cloudpickle==0.6.1
+colorama==0.4.0
+cryptography==2.3.1
+cycler==0.10.0
+Cython==0.29
+dask==0.20.0
+decorator==4.3.0
+defusedxml==0.5.0
+distributed==1.24.0
+Django==2.1.3
+docutils==0.14
+entrypoints==0.2.3
+et-xmlfile==1.0.1
+gevent==1.3.7
+greenlet==0.4.15
+HeapDict==1.0.0
+icc-rt==2019.0
+idna==2.7
+imageio==2.4.1
+imagesize==1.1.0
+importlib-metadata==0.6
+intel-numpy==1.15.1
+intel-openmp==2019.0
+ipykernel==5.1.0
+ipython==7.1.1
+ipython-genutils==0.2.0
+isort==4.3.4
+itsdangerous==1.1.0
+jdcal==1.4
+jedi==0.13.1
+Jinja2==2.10
+joblib==0.12.5
+jsonschema==2.6.0
+jupyter-client==5.2.3
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+keyring==16.0.0
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
+llvmlite==0.25.0
+locket==0.2.0
+lxml==4.2.5
+MarkupSafe==1.0
+matplotlib==3.0.1
+mccabe==0.6.1
+mistune==0.8.4
+mkl==2019.0
+mkl-fft==1.0.6
+mkl-random==1.0.1.1
+more-itertools==4.3.0
+mpmath==1.0.0
+msgpack==0.5.6
+multipledispatch==0.6.0
+nbconvert==5.4.0
+nbformat==4.4.0
+networkx==2.2
+notebook==5.7.0
+numba==0.40.1
+numexpr==2.6.8
+numpy==1.15.3
+numpydoc==0.8.0
+olefile==0.46
+openpyxl==2.5.9
+packaging==18.0
+pandas==0.23.4
+pandocfilters==1.4.2
+parso==0.3.1
+partd==0.3.9
+path.py==11.5.0
+patsy==0.5.1
+PDPbox==0.2.0
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==5.3.0
+pluggy==0.8.0
+prometheus-client==0.4.2
+prompt-toolkit==2.0.7
+psutil==5.4.8
+ptyprocess==0.6.0
+py==1.7.0
+pyasn1==0.4.4
+pycodestyle==2.4.0
+pycparser==2.19
+pyflakes==2.0.0
+Pygments==2.2.0
+pylint==2.1.1
+pyodbc==4.0.24
+pyparsing==2.3.0
+PyQt5==5.9.2
+pytest==3.9.3
+pytest-remotedata==0.3.1
+python-dateutil==2.7.5
+pytz==2018.7
+PyWavelets==1.0.1
+PyYAML==3.13
+pyzmq==17.1.2
+QtAwesome==0.5.2
+qtconsole==4.4.2
+QtPy==1.5.2
+requests==2.20.0
+rope==0.11.0
+ruamel.yaml==0.15.76
+scikit-image==0.14.1
+scikit-learn==0.20.0
+scipy==1.1.0
+seaborn==0.9.0
+Send2Trash==1.5.0
+sip==4.19.8
+six==1.11.0
+snowballstemmer==1.2.1
+sockjs-tornado==1.0.6
+sortedcontainers==2.0.5
+Sphinx==1.8.1
+sphinxcontrib-websupport==1.1.0
+spyder==3.3.1
+spyder-kernels==0.2.6
+SQLAlchemy==1.2.13
+sympy==1.3
+tbb==2019.0
+tbb4py==2019.0
+tblib==1.3.2
+terminado==0.8.1
+testpath==0.4.2
+toolz==0.9.0
+tornado==5.1.1
+traitlets==4.3.2
+typed-ast==1.1.0
+urllib3==1.24.1
+virtualenv==16.1.0
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
+wrapt==1.10.11
+XlsxWriter==1.1.2
+xlwings==0.13.0
+xlwt==1.3.0
+zict==0.1.3
