--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,7 @@ pycparser==2.19
 pyflakes==2.0.0
 Pygments==2.2.0
 pylint==2.1.1
+psycopg2-binary==2.7.5
 pyparsing==2.3.0
 PyQt5==5.9.2
 pytest==3.9.3
