--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ dask==0.20.0
 decorator==4.3.0
 defusedxml==0.5.0
 distributed==1.24.0
+dj-database-url==0.5.0
 Django==2.1.3
 docutils==0.14
 entrypoints==0.2.3
