--- a/requirements.txt
+++ b/requirements.txt
@@ -141,3 +141,9 @@ widgetsnbextension==3.4.2
 wrapt==1.10.11
 xlwt==1.3.0
 zict==0.1.3
+django-bootstrap4==0.0.7
+leaflet==0.0.3
+whitenoise==3.3.1
+mod-wsgi==4.6.5
+dj-static==0.0.6
+static3==0.7.0
