--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 bokeh==1.0.1
 boto==2.49.0
-certifi==2018.10.15
-cffi==1.11.5
-chardet==3.0.4
-cloudpickle==0.6.1
-colorama==0.4.0
 Cython==0.29
 dj-database-url==0.5.0
 Django==2.1.3
+jdcal==1.4
+jedi==0.13.1
 Jinja2==2.10
 keyring==16.0.0
 llvmlite==0.25.0
@@ -20,27 +17,17 @@ mkl-random==1.0.1.1
 mpmath==1.0.0
 msgpack==0.5.6
 multipledispatch==0.6.0
-numpy==1.15.1
+numpy==1.15.3
 numpydoc==0.8.0
 olefile==0.46
 pandas==0.23.4
 pandocfilters==1.4.2
-parso==0.3.1
-partd==0.3.9
-patsy==0.5.1
-pexpect==4.6.0
-pickleshare==0.7.5
-pluggy==0.8.0
-psutil==5.4.8
-PyWavelets==1.0.1
-PyYAML==3.13
-pyzmq==17.1.2
-rope==0.11.0
-ruamel.yaml==0.15.76
+psycopg2-binary==2.7.5
 scikit-learn==0.20.0
 scipy==1.1.0
 SQLAlchemy==1.2.13
 sympy==1.3
+
 django-bootstrap4==0.0.7
 leaflet==0.0.3
 whitenoise==3.3.1
